🔧 chore: release version 1.0.2
- update version to 1.0.2 in manifest and package files
- improve logging with console.debug for better debug control
- enhance type safety with TypeScript interfaces and type annotations
- refactor settings UI using Obsidian API best practices
- remove unused code and optimize async function usage
- add ESLint configuration and fix all linting issues
- remove redundant type annotations for better type inference

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obsidian-ai-note-renamer",
-  "version": "1.0.1",
-  "description": "使用 AI 自动为笔记生成准确、简洁的文件名",
+  "version": "1.0.2",
+  "description": "AI-powered plugin that automatically generates intelligent, context-aware filenames from note content.",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
