ci(pty-server): replace timeout command with cross-platform sleep implementation
- Replace `timeout` command with background process + sleep for cross-platform compatibility
- Update portable-pty dependency from 0.8 to 0.9
- Replace deprecated `serial` crate with `serial2` for improved maintenance
- Update `nix` crate from 0.25.1 to 0.28.0 with simplified dependencies
- Remove unused dependencies: autocfg, memoffset, ioctl-rs, termios, pin-utils
- Add cfg_aliases dependency for platform-specific configuration
- Improve binary testing in CI workflow to work reliably on all platforms (Linux, macOS, Windows)

--- a/.github/workflows/build-rust.yml
+++ b/.github/workflows/build-rust.yml
@@ -150,9 +150,18 @@ jobs:
           BINARY_NAME="pty-server-${{ matrix.platform }}-${{ matrix.arch }}${{ matrix.ext }}"
           chmod +x "binaries/${BINARY_NAME}" 2>/dev/null || true
           
-          # Test that binary can start and output port info
-          timeout 5s "binaries/${BINARY_NAME}" --port 0 > output.txt 2>&1 || true
+          # 使用后台进程 + sleep 实现跨平台超时
+          "binaries/${BINARY_NAME}" --port 0 > output.txt 2>&1 &
+          PID=$!
           
+          # 等待 5 秒
+          sleep 5
+          
+          # 终止进程
+          kill $PID 2>/dev/null || true
+          wait $PID 2>/dev/null || true
+          
+          # 检查输出
           if grep -q '"port"' output.txt; then
             echo "✓ Binary successfully outputs port information"
             cat output.txt
