--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -150,7 +150,7 @@ jobs:
         run: npm run build
 
       - name: Package plugin with binaries
-        run: npm run package
+        run: npm run package:zip
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
