chore: migrate from npm to pnpm package manager
- Replace npm with pnpm in all documentation (README.md, README_CN.md)
- Update GitHub Actions workflow to use pnpm for dependency installation and builds
- Optimize Rust dependency caching in CI/CD using Swatinem/rust-cache@v2
- Add pnpm setup step in release workflow
- Update package.json scripts to use pnpm commands
- Add packageManager field to package.json specifying pnpm@10.0.0
- Generate pnpm-lock.yaml lockfile for reproducible builds
- Update build scripts documentation to reference pnpm
- Improve CI/CD efficiency with better caching strategy for Rust dependencies

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,18 +66,10 @@ jobs:
           sudo apt-get install -y gcc-aarch64-linux-gnu
 
       - name: Cache Rust dependencies
-        uses: actions/cache@v3
+        uses: Swatinem/rust-cache@v2
         with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            pty-server/target/
-          key: ${{ runner.os }}-cargo-${{ matrix.target }}-${{ hashFiles('pty-server/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-${{ matrix.target }}-
-            ${{ runner.os }}-cargo-
+          workspaces: pty-server -> target
+          key: ${{ matrix.target }}
 
       - name: Build PTY server
         working-directory: pty-server
@@ -129,6 +121,9 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Download all Rust binaries
         uses: actions/download-artifact@v4
         with:
@@ -144,10 +139,10 @@ jobs:
           chmod +x binaries/pty-server-linux-arm64 || true
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm i
 
       - name: Build plugin
-        run: npm run build
+        run: pnpm build
 
       - name: Create plugin package directory
         run: |
